# TradeX

./: CMakeLists.txt  README.md  realtime_client.cpp  realtime_server.cpp  trader.cpp
include/: DeribitAPI.hpp  HttpClient.hpp  WebSocketClient.hpp  WebSocketServer.hpp
src/: DeribitAPI.cpp  HttpClient.cpp  WebSocketClient.cpp  WebSocketServer.cpp
